Added an external style sheet and introduced Lobster font family to h1 and h2 elements. Modified title of page in HTML.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Flickr</title>
+    <title>Flickr Test</title>
+    <link rel="stylesheet" href="css/flickrTestStyles.css">
   </head>
   <body>
-    <div align=Center style="font-family:helvetica">
+    <div align=Center>
       <h1>Flickr Titles</h1>
       <br>
       <h2>Search a term on Flickr to see how users title their photos</h2>
