Major revision of front end presentation. Removed second AJAX functionality. Mobile first design testing. Now image with overlay of title.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Flickr Test</title>
-    <link rel="stylesheet" href="css/flickrTestStyles.css">
+    <link rel="stylesheet" href="css/flickrAPIStyles.css">
   </head>
   <body>
     <div align=Center>
@@ -12,11 +12,22 @@
       <h2>Search a term on Flickr to see how users title their photos</h2>
       <input type="text" id="query" value="" >
       <button id="getdata">Search</button>
-    
-      <div id="results" style="width:50%" align=Center>
+      <div id="results">
         
-      </div>
     </div>
     <script src="flickrApp.js" type="text/javascript"></script>
   </body>
 </html>
+
+
+   <!--/* ******** */-->
+   <!--Stash of model HTML to concatinate via JS-->
+   <!--   	<div class="photo-container">-->
+  	<!--			<div class="photo">-->
+  	<!--			  <img src="https://farm9.staticflickr.com/8149/29745190872_50176a637d.jpg" alt="Test Flickr Image">	-->
+  	<!--			  <div class="title_overlay">-->
+   <!--       		 <p id=1> "This amazing title" </p>-->
+  	<!--				</div>-->
+  	<!--			</div>-->
+			<!--</div>-->
+			 <!--/* ******** */-->
