--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <link rel="stylesheet" href="css/flickrAPIStyles.css">
   </head>
   <body>
-    <div align=Center>
-      <h1>Flickr Titles</h1>
-      <br>
-      <h2>Search a term on Flickr to see how users title their photos</h2>
-      <input type="text" id="query" value="" >
-      <button id="getdata">Search</button>
+    <div class="container">
+      <header class = "header">
+        <div class = "main-title-text">
+          <h1>Flickr Titles</h1>
+        </div>
+        <br>
+        <h2>Search a term on Flickr to see how users title their photos</h2>
+        <input type="text" id="query" value="" >
+        <button id="getdata">Search</button>
+      </header>
+      
       <div id="results">
         
+      </div>
     </div>
     <script src="flickrApp.js" type="text/javascript"></script>
   </body>
