Added time delayed scroll function to allow for content jump after API query.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <header class = "header">
+      <header id="header" class = "header">
         <div class = "main-title-text">
           <h1>Flickr Titles</h1>
           <input type="text" id="query" value="">
-          <a href="#results"><button id="getdata">Search</button></a>
+          <button id="getdata">Search</button>
           <h2>Search a term on Flickr to see how users<br>title their photos</h2>
         </div>
       </header>
+       <a class="top-jump" href=#header> 
+          <div>
+            <h2>top</h2>
+          </div>
+        </a>
       <div id="results">
       </div>
     </div>
@@ -23,15 +28,3 @@
   </body>
 </html>
 
-
-   <!--/* ******** */-->
-   <!--Stash of model HTML to concatinate via JS-->
-   <!--   	<div class="photo-container">-->
-  	<!--			<div class="photo">-->
-  	<!--			  <img src="https://farm9.staticflickr.com/8149/29745190872_50176a637d.jpg" alt="Test Flickr Image">	-->
-  	<!--			  <div class="title_overlay">-->
-   <!--       		 <p id=1> "This amazing title" </p>-->
-  	<!--				</div>-->
-  	<!--			</div>-->
-			<!--</div>-->
-			 <!--/* ******** */-->
