Hid top text until query is run. Adjusted line height on mobile views. 800ms.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>Search a term on Flickr to see how users<br>title their photos</h2>
         </div>
       </header>
-       <a class="top-jump" href=#header> 
+       <a id="top" class="top-jump" href=#header> 
           <div>
             <h2>top</h2>
           </div>
