Changed title + added Favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Flickr Test</title>
+    <title>Flickr Poetry</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/flickrAPIStyles.css">
   </head>
@@ -11,10 +11,10 @@
     <div class="container">
       <header id="header" class = "header">
         <div class = "main-title-text">
-          <h1>Flickr Titles</h1>
+          <h1>Flickr Poetry</h1>
           <input type="text" id="query" value="">
           <button id="getdata">Search</button>
-          <h2>Search a term on Flickr to see how users<br>title their photos</h2>
+          <h2>Enter a term to enjoy Flickr titles</h2>
         </div>
       </header>
        <a id="top" class="top-jump" href=#header> 
