--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Flickr Poetry</title>
+    <title>Flickr Poems</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/flickrAPIStyles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="favicons/manifest.json">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div class="container">
       <header id="header" class = "header">
         <div class = "main-title-text">
-          <h1>Flickr Poetry</h1>
+          <h1>Flickr Poems</h1>
           <input type="text" id="query" value="">
           <button id="getdata">Search</button>
           <h2>Enter a term to enjoy Flickr titles</h2>
