--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Flickr Poems</title>
+    <title>Flickr Titles</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/flickrAPIStyles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -17,10 +17,10 @@
     <div class="container">
       <header id="header" class = "header">
         <div class = "main-title-text">
-          <h1>Flickr Poems</h1>
+          <h1>Flickr Titles</h1>
           <input type="text" id="query" value="">
           <button id="getdata">Search</button>
-          <h2>Enter a term to enjoy Flickr titles</h2>
+          <h2>Enter a term to enjoy Flickr file titles</h2>
         </div>
       </header>
        <a id="top" class="top-jump" href=#header> 
