Revised copy to address UX concerns

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>Flickr Titles</h1>
           <input type="text" id="query" value="">
           <button id="getdata">Search</button>
-          <h2>Enter a term to enjoy Flickr file titles</h2>
+          <h2>100 most recently uploaded photos<br>File titles overlaid</h2>
         </div>
       </header>
        <a id="top" class="top-jump" href=#header> 
